feat(fullstack): Gestão de Usuários (CPF/Unidades), UI de Encomendas e Notificações HTML
UserController:

Atualizado UserDTO para aceitar e persistir unidadesList.

Implementada lógica de validação e persistência do campo CPF.

Correção na atualização de usuários para não apagar dados existentes.

Domain (User):

Adicionada anotação @ElementCollection para suportar múltiplas unidades por usuário no banco de dados.

EmailService:

Refatoração para envio de E-mails HTML.

Novo template de notificação de Assembleia com botão "Clique Aqui" e assinatura dinâmica do condomínio.